maradék táblák getmappingelése és egy kiválasztott felhasználó adatainak kiírása

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,20 +57,26 @@
     </tr>
     <tr>
         <td>GET</td>
-        <td><a href="/classrooms">classrooms</a></td>
-        <td>A termek listája</td>
+        <td><a href="/celok">Célok</a></td>
+        <td>A célok listája</td>
         <td>engedélyezett</td>
     </tr>
     <tr>
         <td>GET</td>
-        <td><a href="/teachers">teachers</a></td>
-        <td>A tanarok listája</td>
+        <td><a href="/bemutatok">Bemutatók</a></td>
+        <td>A bemutatók listája</td>
         <td>engedélyezett</td>
     </tr>
     <tr>
         <td>GET</td>
-        <td><a href="/fishers/12">fishers/{id}</a></td>
-        <td>Egy kiválasztott horgász adatai</td>
+        <td><a href="/javasoltak">Javasolt Edzések</a></td>
+        <td>A javasolt edzések listája</td>
+        <td>engedélyezett</td>
+    </tr>
+    <tr>
+        <td>GET</td>
+        <td><a href="/felhasznalok/2">felhasznalok/{id}</a></td>
+        <td>Egy kiválasztott felhasználó adatai</td>
         <td>engedélyezett</td>
     </tr>
     <tr>
