--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <table cellpadding="10">
-    <caption>TimeTable REST API</caption>
+    <caption>Edzesterv REST API</caption>
     <tr>
         <th>Request method</th>
         <th>url path</th>
